# tui-uefi

./: Cargo.toml  LICENSE  README.md
.github/: ci.yaml
.github/workflows/: ci.yaml
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs  ui.rs
ratatui-uefi/: Cargo.toml  README.md
ratatui-uefi/src/: lib.rs
terminput-uefi/: Cargo.toml  README.md
terminput-uefi/src/: lib.rs
