[workspace]
resolver = "3"
members = ["ratatui-uefi", "terminput-uefi", "examples/*"]

[workspace.package]
authors = ["reuben olinsky"]
readme = "README.md"
license = "MIT"
edition = "2024"
keywords = ["tui", "uefi", "terminal"]
rust-version = "1.86.0"

[workspace.dependencies]
ratatui = { version = "0.29.0", default-features = false }
ratatui-uefi = { path = "ratatui-uefi" }
terminput = { version = "0.5.10", default-features = false }
terminput-uefi = { path = "terminput-uefi" }
uefi = { version = "0.35.0", features = ["alloc"] }
