[package]
name = "ratatui-uefi"
version = "0.1.0"
description = "UEFI environment backend for the Ratatui Terminal UI library."
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
ratatui.workspace = true
uefi.workspace = true
