[package]
name = "ratatui-uefi"
version = "0.1.0"
description = "UEFI environment backend for the Ratatui Terminal UI library."
authors.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
ratatui.workspace = true
thiserror = { version = "2", default-features = false }
uefi.workspace = true
