[package]
name = "basic"
publish = false
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.98"
ratatui.workspace = true
ratatui-uefi.workspace = true
terminput.workspace = true
terminput-uefi.workspace = true
uefi.workspace = true
